--- a/style.css
+++ b/style.css
@@ -469,30 +469,15 @@ td {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
-
-#tabellemitte {
+#colorWheel{
     position: absolute;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
-
-.farbauswahlbuttons {
-    width: 100%;
-    height: 100%;
-}
-
-
-
-
-
-
-
-
-
 
 
 
@@ -536,16 +521,6 @@ td {
     position: absolute;
     top: 50%;
     left: 15%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-#farbe {
-    position: absolute;
-    top: 60%;
-    left: 82%;
-    width: 30%;
-    height: 10%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -653,7 +628,13 @@ td {
 }
 
 #display {
-
+    position: absolute;
+    height: 25%;
+    width: 25%;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
 #status {
@@ -664,132 +645,5 @@ td {
     -ms-transform: translate(-50%, -50%);
 }
 
-#farbtabellenid {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-.farbtabelle {
-    width: 70px;
-    height: 50px;
-}
-
-.farbe {
-    width: 100%;
-    height: 100%;
-    border: 2px solid #505050;
-    border-radius: 2px;
-}
-
-#rot {
-    background-color: #ff0000;
-}
-#gelb {
-    background-color: #ffff00;
-}
-#gruen {
-    background-color: #00ff00;
-}
-#blau {
-    background-color: #0000ff;
-}
-#orange {
-    background-color: #ffa500;
-}
-#weiss {
-    background-color: #ffffff;
-}
-#pink {
-    background-color: #ffc0cb;
-}
-#schwarz {
-    background-color: #000000;
-}
-#lila {
-    background-color: #800080;
-}
 
 
-
-
-/*
-#00 {
-    top: 10%;
-    left: 10%;
-}
-
-#01 {
-    top: 20%;
-    left: 10%;
-}
-
-#02 {
-    top: 30%;
-    left: 10%;
-}
-
-#03 {
-    top: 40%;
-    left: 10%;
-}
-
-
-
-#10 {
-    top: 10%;
-    left: 20%;
-}
-
-#11 {
-    top: 20%;
-    left: 20%;
-}
-
-#12 {
-    top: 30%;
-    left: 20%;
-}
-
-#13 {
-    top: 40%;
-    left: 20%;
-}
-
-
-
-#20 {
-
-}
-
-#21 {
-
-}
-
-#22 {
-
-}
-
-#23 {
-
-}
-
-
-
-#30 {
-
-}
-
-#31 {
-
-}
-
-#32 {
-
-}
-
-#33 {
-
-}
