--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ html, body {
     height: 80%;
     top: 55%;
     left: 50%;
-    background-image: url("images/boden.jpg");
+    background-image: url("images/boden.png");
     background-size: 60%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -209,7 +209,7 @@ html, body {
 
 #steckdose_0 {
     top: 5%;
-    left: 10%;
+    left: 15%;
 }
 #steckdose_1 {
     top: 95%;
@@ -301,6 +301,61 @@ html, body {
     height: 12%;
     background-color: #000000;
     border: 2px solid #ffffff;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+#computer {
+    position: absolute;
+    z-index: 5;
+    top: 14%;
+    left: 7%;
+    width: 100px;
+    height: 120px;
+    background-image: url("images/computer.png");
+    background-size: 100%;
+    opacity: 1;
+    background-repeat: no-repeat;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+#monitore {
+    position: absolute;
+    z-index: 5;
+    top: 80%;
+    left: 7%;
+    width: 100px;
+    height: 100px;
+    background-image: url("images/monitor.png");
+    background-size: 100%;
+    opacity: 1;
+    background-repeat: no-repeat;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+#schreibtischlampe_1 {
+    top: 40%;
+    left: 7%;
+    background-image: url("images/lampe.png");
+    background-size: 100%;
+    opacity: 1;
+}
+
+#schreibtischlampe_2 {
+    top: 90%;
+    left: 7%;
+}
+
+.schreibtischlampe {
+    position: absolute;
+    z-index: 5;
+    width: 40px;
+    height: 48px;
+    background: rgba(0, 0, 0, 0.0);
+    background-repeat: no-repeat;
+    border: none;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
