Schreibtischgestaltung und zurueck button fuer farbauswahl hinzugefuegt

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ html, body {
     top: 55%;
     left: 50%;
     background-image: url("images/boden.png");
-    background-size: 60%;
+    background-size: 70%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -306,38 +306,24 @@ html, body {
 }
 
 #computer {
-    position: absolute;
-    z-index: 5;
-    top: 14%;
+    top: 5%;
     left: 7%;
-    width: 100px;
-    height: 120px;
     background-image: url("images/computer.png");
     background-size: 100%;
     opacity: 1;
-    background-repeat: no-repeat;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
 }
 
 #monitore {
-    position: absolute;
-    z-index: 5;
     top: 80%;
     left: 7%;
-    width: 100px;
-    height: 100px;
     background-image: url("images/monitor.png");
     background-size: 100%;
     opacity: 1;
-    background-repeat: no-repeat;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
 }
 
 #schreibtischlampe_1 {
-    top: 40%;
-    left: 7%;
+    top: 20%;
+    left: 4%;
     background-image: url("images/lampe.png");
     background-size: 100%;
     opacity: 1;
@@ -345,7 +331,10 @@ html, body {
 
 #schreibtischlampe_2 {
     top: 90%;
-    left: 7%;
+    left: 15%;
+    background-image: url("images/lampe.png");
+    background-size: 100%;
+    opacity: 1;
 }
 
 .schreibtischlampe {
@@ -353,6 +342,30 @@ html, body {
     z-index: 5;
     width: 40px;
     height: 48px;
+    background: rgba(0, 0, 0, 0.0);
+    background-repeat: no-repeat;
+    border: none;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.monitore {
+    position: absolute;
+    z-index: 5;
+    width: 68px;
+    height: 10px;
+    background: rgba(0, 0, 0, 0.0);
+    background-repeat: no-repeat;
+    border: none;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.computer {
+    position: absolute;
+    z-index: 5;
+    width: 90px;
+    height: 42px;
     background: rgba(0, 0, 0, 0.0);
     background-repeat: no-repeat;
     border: none;
