--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
 }
 
 .header {
@@ -27,9 +28,18 @@ html, body {
     color: #c0c0c0;
     background-color: #282828;
     border: 2px solid #505050;
-    border-radius: 3%;
-    text-align: center;
+    border-radius: 3px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.regalnummertext {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
     font-size: 200%;
+    text-align: center;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -47,7 +57,8 @@ html, body {
 }
 
 #allesteckdosenaus {
-    left: 55%;
+    left: 56%;
+    width: 12%;
 }
 
 .headerbutton {
@@ -62,6 +73,9 @@ html, body {
     border-radius: 10px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+    font-family: 'Quicksand', sans-serif;
+    font-size: 90%;
+    font-weight: 500;
 }
 
 .background {
@@ -128,6 +142,8 @@ html, body {
     top: 55%;
     left: 50%;
     background-image: url("images/boden.png");
+    border: 2px solid #505050;
+    border-radius: 3px;
     background-size: 70%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -139,7 +155,8 @@ html, body {
     left: 77%;
     width: 42%;
     height: 50%;
-    background-color: #000000;
+    border: 2px solid #505050;
+    background-color: #1d1a20;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -162,7 +179,8 @@ html, body {
     left: 95%;
     width: 10%;
     height: 14%;
-    background-color: #000000;
+    border: 2px solid #505050;
+    background-color: #1d1a20;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -277,7 +295,8 @@ html, body {
     left: 97.5%;
     width: 5%;
     height: 50%;
-    background-color: #000000;
+    border: 2px solid #505050;
+    background-color: #1d1a20;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -299,8 +318,8 @@ html, body {
     left: 18%;
     width: 16%;
     height: 12%;
-    background-color: #000000;
-    border: 2px solid #ffffff;
+    background-color: #1d1a20;
+    border: 2px solid #505050;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -314,9 +333,9 @@ html, body {
 }
 
 #monitore {
-    top: 80%;
+    top: 68%;
     left: 7%;
-    background-image: url("images/monitor.png");
+    background-image: url("images/monitore.png");
     background-size: 100%;
     opacity: 1;
 }
@@ -352,8 +371,8 @@ html, body {
 .monitore {
     position: absolute;
     z-index: 5;
-    width: 68px;
-    height: 10px;
+    width: 76px;
+    height: 214px;
     background: rgba(0, 0, 0, 0.0);
     background-repeat: no-repeat;
     border: none;
@@ -377,8 +396,8 @@ html, body {
     position: absolute;
     width: 30%;
     height: 12%;
-    border: 2px solid #ffffff;
-    background-color: #000000;
+    border: 2px solid #505050;
+    background-color: #1d1a20;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -398,7 +417,6 @@ html, body {
     height: 48%;
     top: 36%;
     left: 52.5%;
-
 }
 
 #regal_4 {
@@ -436,6 +454,7 @@ html, body {
 
 #tabelle {
     border: 8px solid #000000;
+    border-radius: 4px;
 }
 
 table {
@@ -462,6 +481,7 @@ td {
     height: 100%;
     border: 2px solid #000000;
     background-image: url("images/schloss.png");
+    background-repeat: no-repeat;
     background-size: 100%;
 }
 
@@ -484,6 +504,7 @@ td {
 
 #fachansichttabelle {
     border: 8px solid #000000;
+    border-radius: 4px;
 }
 
 .led {
@@ -558,6 +579,7 @@ td {
     color: #ffffff;
     background-color: #717171;
     border: 2px solid #505050;
+    border-radius: 30px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -583,6 +605,7 @@ td {
     color: #ffffff;
     background-color: #282828;
     border: 2px solid #505050;
+    border-radius: 60px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
  }
@@ -595,8 +618,13 @@ td {
     width: 60%;
     height: 40%;
     border: 1px solid #000000;
+    border-radius: 4px;
+    text-align: center;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+    font-family: 'Quicksand', sans-serif;
+    font-size: 110%;
+    font-weight: 500;
 }
 
 #hexname {
@@ -615,9 +643,11 @@ td {
     height: 30%;
     border: 3px solid #505050;
     border-radius: 40px;
-    font-size: 200%;
+    font-size: 240%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
 }
 
 #versteckterbutton {
@@ -632,10 +662,98 @@ td {
     color: #ffffff;
     background-color: #282828;
     border: 2px solid #505050;
+    border-radius: 60px;
     text-align: center;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
+
+/*chrome*/
+
+input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 28px;
+    outline: none;
+    border: 0;
+    background: transparent;
+}
+
+input[type=range]::-webkit-slider-runnable-track{
+    background: #717171;
+    height: 4px;
+    border-radius: 4px;
+    transition: .3s;
+}
+
+input[type=range]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    background: pink;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-top: -12px;
+    border: 4px solid #505050;
+}
+#redbar::-webkit-slider-thumb {
+    background: #ff0000;
+}
+#bluebar::-webkit-slider-thumb {
+    background: #0000ff;
+}
+#greenbar::-webkit-slider-thumb {
+    background: #00ff00;
+}
+
+/*firefox*/
+
+input[type=range]::-moz-focus-outer {
+    border: 0;
+}
+
+input[type=range]::-moz-range-thumb {
+    -webkit-appearance: none;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-top: -12px;
+    border: 4px solid #505050;
+}
+
+input[type=range]::-moz-range-track {
+    height: 4px;
+    background: #717171;
+    border-radius: 4px;
+    transition: .3s;
+}
+
+input[type=range]::-moz-range-progress {
+    border-radius: 4px;
+    height: 4px;
+}
+
+#redbar::-moz-range-thumb {
+    background: #ff0000;
+}
+#bluebar::-moz-range-thumb {
+    background: #0000ff;
+}
+#greenbar::-moz-range-thumb {
+    background: #00ff00;
+}
+
+#redbar::-moz-range-progress {
+    background: #ff0000;
+}
+#bluebar::-moz-range-progress {
+    background: #0000ff;
+}
+#greenbar::-moz-range-progress {
+    background: #00ff00;
+}
+
+
+
 
 #reddivbar {
     top: 25%;
@@ -657,7 +775,7 @@ td {
     width: 75%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-}
+    }
 
 #redname {
     position: absolute;
