--- a/style.css
+++ b/style.css
@@ -729,22 +729,23 @@ input[type=range]::-moz-focus-outer {
 
 input[type=range]::-moz-range-thumb {
     -webkit-appearance: none;
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
     margin-top: -4px;
+    border: 0;
 }
 
 input[type=range]::-moz-range-track {
-    height: 12px;
+    height: 13px;
     background: #717171;
-    border-radius: 4px;
+    border-radius: 30px;
     transition: .3s;
 }
 
 input[type=range]::-moz-range-progress {
-    border-radius: 4px;
-    height: 12px;
+    border-radius: 30px;
+    height: 13px;
 }
 
 #redbar::-moz-range-thumb {
