--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ html, body {
     font-weight: 500;
 }
 
+input[type="button"]:focus{
+    outline:none !important;
+}
+input[type="button"]::-moz-focus-inner {
+    border: 0 !important;
+}
+
 .header {
     position: absolute;
     z-index: 6;
@@ -669,7 +676,7 @@ td {
 
 }
 
-.bar {
+.bardiv {
     position: absolute;
     left: 50%;
     height: 18%;
@@ -687,8 +694,6 @@ td {
 
 input[type=range] {
     -webkit-appearance: none;
-    width: 100%;
-    height: 28px;
     outline: none;
     border: 0;
     background: transparent;
@@ -783,16 +788,6 @@ input[type=range]::-moz-range-progress {
     top: 75%;
 }
 
-#redbar {
-    position: absolute;
-    top: 50%;
-    left: 58%;
-    height: 100%;
-    width: 75%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    }
-
 #redname {
     position: absolute;
     top: 75%;
@@ -800,16 +795,6 @@ input[type=range]::-moz-range-progress {
     height: 100%;
     width: 25%;
     text-align: center;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-#greenbar {
-    position: absolute;
-    top: 50%;
-    left: 58%;
-    height: 100%;
-    width: 75%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -825,16 +810,6 @@ input[type=range]::-moz-range-progress {
     -ms-transform: translate(-50%, -50%);
 }
 
-#bluebar {
-    position: absolute;
-    top: 50%;
-    left: 58%;
-    height: 100%;
-    width: 75%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
 #bluename {
     position: absolute;
     top: 75%;
@@ -842,6 +817,16 @@ input[type=range]::-moz-range-progress {
     height: 100%;
     width: 25%;
     text-align: center;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.bar {
+    position: absolute;
+    top: 50%;
+    left: 58%;
+    height: 100%;
+    width: 75%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
