--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ input[type="button"]::-moz-focus-inner {
     left: 50%;
     width: 100%;
     height: 10%;
-    background-color: #404040;
+    background-image: linear-gradient(50deg, #404040 50%, #505060);
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
@@ -71,7 +71,7 @@ input[type="button"]::-moz-focus-inner {
 .background {
     width: 100%;
     height: 100%;
-    background-color: #282828;
+    background-image: linear-gradient(50deg, #282828 60%, #383848)
 }
 
 #alleregalehauptmenue {
@@ -599,7 +599,7 @@ td {
     top: 50%;
     left: 75%;
     color: #ffffff;
-    background-color: #57606f;
+    background-image: linear-gradient(50deg, #57606f 50%, #67708f);
     border: 2px solid #505050;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -663,7 +663,7 @@ td {
     left: 50%;
     width: 70%;
     height: 14%;
-    border: 3px solid #505050;
+    border: 0;
     border-radius: 40px;
     font-size: 240%;
     transform: translate(-50%, -50%);
@@ -701,7 +701,7 @@ input[type=range] {
 
 input[type=range]::-webkit-slider-runnable-track{
     background: #717171;
-    height: 12px;
+    height: 8px;
     width: 100%;
     border-radius: 30px;
     transition: .3s;
@@ -714,7 +714,7 @@ input[type=range]::-webkit-slider-thumb{
     height: 22px;
     border-radius: 50%;
     border: 3px solid #505050;
-    margin-top: -5px;
+    margin-top: -7px;
 }
 #redbar::-webkit-slider-thumb {
     background: #ff4757;
@@ -827,6 +827,15 @@ input[type=range]::-moz-range-progress {
     left: 58%;
     height: 100%;
     width: 75%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.bar::-moz-range-progress {
+    position: absolute;
+    top: 50%;
+    left: 54%;
+    height: 100%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
