--- a/style/schlafzimmerstyle.css
+++ b/style/schlafzimmerstyle.css
@@ -68,14 +68,37 @@ input[type="button"]::-moz-focus-inner {
     font-weight: 500;
 }
 
+.rundbutton {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/home.png");
+    background-size: 100%;
+    opacity: 1;
+    background-repeat: no-repeat;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
 .background {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(50deg, #282828 60%, #383848)
 }
 
+#alleregalemainmenue {
+    top: 50%;
+    left: 3%;
+    border-radius: 50%;
+    width: 4%;
+    padding-bottom: 4%;
+    background-color: #6c5ce7;
+}
+
 #alleregalehauptmenue {
-    left: 10%;
+    left: 12%;
 }
 
 #alleregale {
@@ -96,8 +119,16 @@ input[type="button"]::-moz-focus-inner {
 
 
 
+#regalansichtmainmenue {
+    top: 50%;
+    left: 3%;
+    width: 40px;
+    height: 40px;
+    background-color: #6c5ce7;
+}
+
 #regalansichthauptmenue {
-    left: 10%;
+    left: 12%;
 }
 
 #regalansichtalleleds {
@@ -117,6 +148,17 @@ input[type="button"]::-moz-focus-inner {
 
 
 
+#fachansichtmainmenue {
+    top: 50%;
+    left: 3%;
+    width: 40px;
+    height: 40px;
+    background-color: #6c5ce7;
+}
+
+#fachansichthauptmenue {
+    left: 12%;
+}
 
 #fachansichtalleleds {
     left: 25%;
@@ -133,11 +175,19 @@ input[type="button"]::-moz-focus-inner {
     background-color: #ffa502;
 }
 
-#fachansichthauptmenue {
+
+
+
+#farbauswahlmainmenue {
+    top: 50%;
+    left: 3%;
+    width: 40px;
+    height: 40px;
+    background-color: #6c5ce7;
+}
+#farbauswahlhauptmenue {
     left: 10%;
 }
-
-
 #farbauswahlausschalten {
     left: 40%;
     background-color: #ff4757;
@@ -146,9 +196,7 @@ input[type="button"]::-moz-focus-inner {
     left: 90%;
     background-color: #ffa502;
 }
-#farbauswahlhauptmenue {
-    left: 10%;
-}
+
 
 
 
@@ -161,7 +209,7 @@ input[type="button"]::-moz-focus-inner {
     height: 80%;
     top: 55%;
     left: 50%;
-    background-image: url("images/boden.png");
+    background-image: url("../images/boden.png");
     border: 2px solid #505050;
     border-radius: 3px;
     background-size: 70%;
@@ -224,7 +272,7 @@ input[type="button"]::-moz-focus-inner {
     left: 50%;
     width: 100%;
     height: 100%;
-    background-image: url("images/gluehbirne.png");
+    background-image: url("../images/gluehbirne.png");
     background-size: 100%;
     opacity: 1;
     background-repeat: no-repeat;
@@ -287,7 +335,7 @@ input[type="button"]::-moz-focus-inner {
     left: 50%;
     width: 100%;
     height: 100%;
-    background-image: url("images/steckdose_green.png");
+    background-image: url("../images/steckdose_green.png");
     background-size: 100%;
     opacity: 1;
     background-repeat: no-repeat;
@@ -301,7 +349,7 @@ input[type="button"]::-moz-focus-inner {
     left: 50%;
     width: 100%;
     height: 100%;
-    background-image: url("images/steckdose_red.png");
+    background-image: url("../images/steckdose_red.png");
     background-size: 100%;
     opacity: 1;
     background-repeat: no-repeat;
@@ -347,7 +395,7 @@ input[type="button"]::-moz-focus-inner {
 #computer {
     top: 5%;
     left: 7%;
-    background-image: url("images/computer.png");
+    background-image: url("../images/computer.png");
     background-size: 100%;
     opacity: 1;
 }
@@ -355,7 +403,7 @@ input[type="button"]::-moz-focus-inner {
 #monitore {
     top: 68%;
     left: 7%;
-    background-image: url("images/monitore.png");
+    background-image: url("../images/monitore.png");
     background-size: 100%;
     opacity: 1;
 }
@@ -363,7 +411,7 @@ input[type="button"]::-moz-focus-inner {
 #schreibtischlampe_1 {
     top: 20%;
     left: 4%;
-    background-image: url("images/lampe.png");
+    background-image: url("../images/lampe.png");
     background-size: 100%;
     opacity: 1;
 }
@@ -371,7 +419,7 @@ input[type="button"]::-moz-focus-inner {
 #schreibtischlampe_2 {
     top: 90%;
     left: 15%;
-    background-image: url("images/lampe.png");
+    background-image: url("../images/lampe.png");
     background-size: 100%;
     opacity: 1;
 }
@@ -500,7 +548,7 @@ td {
     width: 100%;
     height: 100%;
     border: 2px solid #000000;
-    background-image: url("images/schloss.png");
+    background-image: url("../images/schloss.png");
     background-repeat: no-repeat;
     background-size: 100%;
 }
