--- a/style/schlafzimmerstyle.css
+++ b/style/schlafzimmerstyle.css
@@ -16,6 +16,17 @@ input[type="button"]::-moz-focus-inner {
     border: 0 !important;
 }
 
+div {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+#zimmerbackground, #regalansichtbackground, #fachansichtbackground, #farbauswahlbackground {
+    top: 50%;
+    left: 50%;
+}
+
 .header {
     position: absolute;
     z-index: 6;
@@ -734,6 +745,13 @@ td {
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+}
+
+#iro__colorPicker {
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
 }
 
 
