--- a/style/mainmenustyle.css
+++ b/style/mainmenustyle.css
@@ -7,26 +7,34 @@ html, body {
     font-weight: 500;
 }
 
+div, button {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
 #mainmenu {
-    width: 100%;
-    height: 100%;
     background: linear-gradient(40deg, #3b3650, #3b3640 50%, #574960, #574970);
 }
 
+#mitte {
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+}
+
 .maindiv {
-    position: absolute;
     width: 16%;
     height: 40%;
     color: #ffffff;
     background: linear-gradient(10deg, transparent 20%, #ff5e57, #f53b57, #f54478);
     border: 0;
     border-radius: 30px;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+
 }
 
 .mainbild {
-    position: absolute;
     top: 30%;
     left: 50%;
     width: 100px;
@@ -38,12 +46,9 @@ html, body {
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
 }
 
 .mainname {
-    position: absolute;
     top: 74%;
     left: 50%;
     width: 100%;
@@ -51,8 +56,6 @@ html, body {
     color: #ffffff;
     border: 0;
     border-radius: 50px;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
     font-size: 140%;
@@ -137,4 +140,35 @@ html, body {
 #sleepbild {
     background-color: #c44569;
     background-image: url("../images/icons/schlafen.png");
+}
+
+@media all and (orientation: landscape) {
+    #mainmenu {
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media all and (orientation: portrait) {
+    body{
+        width: 100%;
+        height: 100%;
+        margin:0;
+        overflow:hidden;
+    }
+    .background{
+        transform: rotate(90deg);
+        transform-origin:bottom left;
+
+        position:absolute;
+        top: -100vw;
+        left: 0;
+
+        height:100vw;
+        width:100vh;
+
+        overflow:auto;
+    }
 }
